Update translation for cma map

--- a/data/translation/dictionary.csv
+++ b/data/translation/dictionary.csv
@@ -25,3 +25,4 @@ report,Report,Rapport
 generate_report,Generate Report,Créer un rapport
 cma_map,CMA Map,RMR carte
 fake_data_message,Contains Fake Data,Contient de fausses données
+yearly_sales,Yearly sales,Ventes annuelles
